添加可以在jdk1.7版本运行的测试用例